--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,148 +4,194 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RegisterActivity">
 
-<!--    <TextView-->
-<!--        android:id="@+id/textView4"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="50dp"-->
-<!--        android:text=""-->
-<!--        android:textSize="30sp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-<!--    <TextView-->
-<!--        android:id="@+id/textView5"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        android:text="출입 인증 상태"-->
-<!--        android:textSize="30sp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+    <LinearLayout
+        android:layout_width="413dp"
+        android:layout_height="730dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#00FFFFFF"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_connect"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="블루투스 연결"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/textView5"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/textView5"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView5" />-->
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="35dp"
+            android:text="test"
+            android:textAlignment="center"
+            android:textColor="#FDFDFD"
+            android:textSize="34sp" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/tv_id"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginLeft="8dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:layout_marginRight="8dp"-->
-<!--        android:text="걸음걸이를 인증하세요"-->
-<!--        android:textSize="30sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btn_connect" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="617dp"
+            android:background="@drawable/login_shape"
+            android:backgroundTint="#F9F9F9"
+            android:orientation="vertical">
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_sensor"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="걸음걸이 인증"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/tv_id"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/tv_id"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tv_id" />-->
+            <TextView
+                android:id="@+id/gyro_x1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_open"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="출입문 열기"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/btn_sensor"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/btn_sensor"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btn_sensor" />-->
+            <TextView
+                android:id="@+id/gyro_x2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-<!--    <androidx.gridlayout.widget.GridLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        tools:layout_editor_absoluteX="-16dp"-->
-<!--        tools:layout_editor_absoluteY="-147dp">-->
+            <TextView
+                android:id="@+id/gyro_x3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-<!--    </androidx.gridlayout.widget.GridLayout>-->
-    <Button
-        android:id="@+id/btnBluetoothOn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:text="블루투스 ON"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/gyro_y1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <Button
-        android:id="@+id/btnBluetoothOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="블루투스 OFF"
-        app:layout_constraintStart_toEndOf="@+id/btnBluetoothOn"
-        app:layout_constraintTop_toTopOf="@+id/btnBluetoothOn" />
+            <TextView
+                android:id="@+id/gyro_y2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <TextView
-        android:id="@+id/tvBluetoothStatus"
-        android:layout_width="170dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="10dp"
-        android:text="status"
-        app:layout_constraintStart_toStartOf="@+id/btnBluetoothOn"
-        app:layout_constraintTop_toBottomOf="@+id/btnBluetoothOn" />
+            <TextView
+                android:id="@+id/gyro_y3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <Button
-        android:id="@+id/btnConnect"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:text="연결하기"
-        app:layout_constraintStart_toStartOf="@+id/tvBluetoothStatus"
-        app:layout_constraintTop_toBottomOf="@+id/tvBluetoothStatus" />
+            <TextView
+                android:id="@+id/gyro_z1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <TextView
-        android:id="@+id/tvReceiveData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Receive"
-        app:layout_constraintStart_toStartOf="@+id/btnSendData"
-        app:layout_constraintTop_toBottomOf="@+id/btnSendData" />
+            <TextView
+                android:id="@+id/gyro_z2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <Button
-        android:id="@+id/btnSendData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="전송"
-        app:layout_constraintStart_toStartOf="@+id/btnConnect"
-        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />
+            <TextView
+                android:id="@+id/gyro_z3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
-    <EditText
-        android:id="@+id/tvSendData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Send Data"
-        app:layout_constraintStart_toEndOf="@+id/btnSendData"
-        app:layout_constraintTop_toTopOf="@+id/btnSendData" />
+            <TextView
+                android:id="@+id/acc_x1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
 
+            <TextView
+                android:id="@+id/acc_x2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_x3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_y1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_y2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_y3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_z1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_z2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <TextView
+                android:id="@+id/acc_z3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundTint="#000000"
+                android:text="TextView"
+                android:textColor="#C60000" />
+
+            <Button
+                android:id="@+id/btn_gyro2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="gait registration" />
+
+            <Button
+                android:id="@+id/btn_blue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
